--- a/style/index.css
+++ b/style/index.css
@@ -42,27 +42,153 @@
     justify-content: center;
     margin-top: 10px;
 }
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button{
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button {
     margin: 0 15px;
+    font-size: 16px;
+    padding: 5px;
+    background: var(--jp-layout-color1);
+    border: none;
+    box-sizing: border-box;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 7px;
+    margin: 0px;
+    border-radius: var(--jp-border-radius);
+    display: flex;
+    align-items: center;
 }
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
-    margin-top: 10px;
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button:hover{
+    background: var(--jp-layout-color2);
 }
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-popper {
     z-index: 1000;
-}
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-name {
-    transform: translate(0, 1.5px) scale(0.75);
-    transform-origin: top left;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-slider {
     display: flex;
     align-items: center;
     height: 30px;
-    padding: 15px 20px 10px;
     overflow: hidden;
 }
 
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
+    margin-top: 10px;
+    padding: 0 10px;
+}
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-name {
+    transform: translate(0, 1.5px) scale(0.75);
+    transform-origin: top left;
+}
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper {
+    padding: 0px 8px;
+    border: 1px solid var(--jp-border-color0);
+    background:var(--jp-layout-color0);
+    height: 30px;
+    position: relative;
+}
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:after {
+    content: ' ';
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:focus-within {
+    border: 1px solid #2196f3;
+}
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input {
+    background: transparent;
+    width: calc(100% - 18px);
+    float: left;
+    border: none;
+    outline: none;
+    font-size: var(--jp-ui-font-size1);
+    color: var(--jp-ui-font-color0);
+    line-height: var(--jp-private-commandpalette-search-height);
+}
+.jp-EodagWidget .jp-EodagWidget-form .react-datepicker-wrapper,.jp-EodagWidget .jp-EodagWidget-form .react-datepicker__input-container {
+    width: 100%;
+}
+.jp-EodagWidget input[type=range] {
+    width: 100%;
+    -webkit-appearance: none;
+    outline: none;
+}
+.jp-EodagWidget input[type=range]::-webkit-slider-runnable-track{
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: var(--jp-layout-color0);
+    border-radius: 0px;
+    border: 1px solid var(--jp-border-color0);
+}
+.jp-EodagWidget input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--jp-brand-color1);
+    cursor: pointer;
+    outline: none;
+    color: var(--jp-brand-color1); 
+    margin-top: -8px;
+}
+.jp-EodagWidget input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: var(--jp-layout-color0);
+    border-radius: 0px;
+    border: 1px solid var(--jp-border-color0);
+} 
+.jp-EodagWidget input[type=range]::-moz-range-thumb {
+    appearance: none;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--jp-brand-color1);
+    cursor: pointer;
+    outline: none;
+    color: var(--jp-brand-color1); 
+    margin-top: -8px;
+}
+.jp-EodagWidget input[type=range]::-moz-range-progress {
+    height: 0;
+    background: transparent;
+}
+.jp-EodagWidget input[type=range]::-ms-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: var(--jp-layout-color0);
+    border-radius: 0px;
+    border: 1px solid var(--jp-border-color0);
+    color: transparent;
+}
+.jp-EodagWidget input[type=range]::-ms-thumb {
+    appearance: none;
+    padding: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--jp-brand-color1);
+    cursor: pointer;
+    outline: none;
+    color: var(--jp-brand-color1); 
+    margin-top: -8px;
+}
+.jp-EodagWidget input[type=range]::-ms-tooltip {
+    display: none;
+}
+.jp-EodagWidget input[type=range]::-ms-fill-lower {
+    background: transparent;
+}
+.jp-EodagWidget input[type=range]::-ms-fill-upper {
+    background: transparent;
+}
 
 .jp-EodagWidget-modal .jp-EodagWidget-quicklook-wrapper {
     display: flex;
@@ -113,5 +239,95 @@
 }
 
 .jp-EodagWidget-modal .jp-EodagWidget-title {
-    flex-grow: 1
+    flex-grow: 1;
+}
+
+.jp-EodagWidget-appbar {
+    flex: 1 100%;
+    background-color: var(--jp-brand-color1);
+    padding: 12px 10px;
+    font-size: 20px;
+    color: white; 
+}
+
+.jp-Eodag-tooltip {
+    max-width: 250px;
+    padding-right: 15px;
+    word-wrap: break-word; 
+}
+
+#jp-left-stack {
+    z-index: 2;
+}
+.jp-EodagWidget::-webkit-scrollbar {
+    z-index: 0;
+}
+
+/* Design Table */
+
+.jp-EodagWidget-browse-wrapper .noClick{ 
+    cursor: initial;
+}
+.jp-EodagWidget-browse-wrapper .tableCell{ 
+    flex: 1;
+}
+.jp-EodagWidget-browse-wrapper .headerRow{ 
+    height: 40px;
+    border-bottom: 2px solid #2196f3;
+    color: #818181;
+}
+.jp-EodagWidget-browse-wrapper .tableRow{ 
+    cursor: pointer;
+    border-bottom: 1px solid rgba(180, 180, 180, 0.719);
+}
+.jp-EodagWidget-browse-wrapper .tableRow:hover{ 
+    background-color: rgba(180, 180, 180, 0.747);
+}
+.jp-EodagWidget-browse-wrapper .flexContainer{ 
+    text-align: center;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    justify-content: center;
+}
+.jp-EodagWidget-appbar button, .jp-EodagWidget-browse-wrapper button {
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+.jp-EodagWidget-appbar button {
+    color: white;
+}
+.jp-EodagWidget-apply {
+    float: right;
+    padding: 3px 6px; 
+}
+.jp-EodagWidget-apply:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.jp-EodagWidget-product h4 {
+    padding-left: 20px;
+
+}
+.result-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.result-table tr {
+    border-bottom: 1px solid rgba(180, 180, 180, 0.719);
+}
+.result-table tr:hover {
+    background-color: rgba(180, 180, 180, 0.747);
+}
+.result-table td {
+    padding: 18px 20px;
+    font-size: 15px;
+    border-bottom: 1px solid rgba(180, 180, 180, 0.719);
+}
+#endDate-error-text {
+    color: red;
+    margin-top: -3px;
 }
