feat: display more metadata
Metadata are displayed in a table with scroll.

The following metadata are the first items when available:

 - platformSerialIdentifier
 - instrument
 - productType
 - processingLevel
 - sensorMode
 - startTimeFromAscendingNode
 - completionTimeFromAscendingNode
 - orbitDirection
 - orbitNumber
 - cloudCover

Other metadata are listed in alphabetic order below this list.

Metadata labels are constructed from metadata’s name splited on upper
letters (split camel case) in order to be generic.

Metadata whose values are different from string, number or list of
strings are not displayed.

ref: #10

--- a/style/result.css
+++ b/style/result.css
@@ -1,5 +1,6 @@
 .result-table {
   width: 100%;
+  table-layout: fixed;
   border-collapse: collapse;
 }
 .result-table tr {
@@ -9,6 +10,7 @@
   background-color: rgba(180, 180, 180, 0.747);
 }
 .result-table td {
+  width: 50%;
   padding: 18px 20px;
   font-size: 15px;
   border-bottom: 1px solid rgba(180, 180, 180, 0.719);
