--- a/style/base.css
+++ b/style/base.css
@@ -1,3 +1,12 @@
+:root {
+  --light-gray: #c1c1c1;
+  --gray: #666666;
+  --base-button: #1976d2;
+  --button-hover: #3bacff;
+  --border-radius: 5px;
+  --base-font-size: 14px;
+}
+
 .jp-EodagWidget {
   display: flex;
   flex-direction: column;
@@ -6,6 +15,7 @@
   font-size: var(--jp-ui-font-size1);
   overflow: auto;
   padding: 5px;
+  min-width: 300px;
 }
 
 .jp-EodagWidget-header {
@@ -23,24 +33,46 @@
   display: flex;
   flex-direction: column;
 }
-
-.jp-EodagWidget-from-buttons-wrapper {
+.jp-EodagWidget-form-buttons {
+  width: 100%;
+  max-width: 450px;
+  margin: auto;
+}
+.jp-EodagWidget-form-buttons-wrapper {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+}
+.jp-EodagWidget-input-wrapper {
+  display: flex;
+  align-items: center;
+}
+.jp-EodagWidget-input-wrapper > svg {
+  display: inline-block;
+  color: var(--gray);
 }
 
+.jp-EodagWidget-form-date-picker {
+  padding: 0 10px;
+}
+
+.jp-EodagWidget-form-date-picker-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button {
   cursor: pointer;
+  min-width: 110px;
+  max-width: 150px;
   margin: 0 15px;
-  font-size: 16px;
   padding: 5px;
-  color: var(--jp-ui-font-color1);
-  background: var(--jp-layout-color1);
+  color: #ffffff;
+  background: var(--base-button);
   border: none;
   box-sizing: border-box;
   outline: none;
@@ -49,12 +81,23 @@
   -moz-appearance: none;
   padding: 7px;
   margin: 0px;
-  border-radius: var(--jp-border-radius);
+  border-radius: var(--border-radius);
   display: flex;
   align-items: center;
+  justify-content: start;
 }
+
+.jp-EodagWidget-buttons svg {
+  margin-right: 0.5rem;
+}
+
+.jp-EodagWidget-buttons p {
+  text-align: left;
+  font-size: var(--jp-ui-font-size1);
+}
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button:hover {
-  background: var(--jp-layout-color2);
+  background: var(--button-hover);
 }
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-popper {
   position: relative;
@@ -73,6 +116,9 @@
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
   margin-top: 10px;
   padding: 0 10px;
+
+  max-width: 450px;
+  margin: auto;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field fieldset {
   margin-top: 1.5em;
@@ -87,6 +133,13 @@
   background: var(--jp-layout-color0);
   height: 30px;
   position: relative;
+  border-radius: 5px;
+}
+
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-input-wrapper:nth-child(1) {
+  margin-right: 0.1rem;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:after {
   content: ' ';
@@ -102,24 +155,51 @@
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input {
   background: transparent;
   width: calc(100% - 18px);
-  float: left;
+  /* float: left; */
   border: none;
   outline: none;
   font-size: var(--jp-ui-font-size1);
   color: var(--jp-ui-font-color0);
   line-height: var(--jp-private-commandpalette-search-height);
+  margin-left: -20px;
+  width: 100%;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input::placeholder {
+  color: var(--gray);
+  padding-left: 20px;
 }
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters {
+  padding: 0 10px;
+}
+
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-input-name {
+  margin-bottom: 10px;
+}
+
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   .section {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.3rem;
 }
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   input {
   margin: 0 0.1em;
   line-height: var(--jp-private-commandpalette-search-height);
@@ -131,54 +211,54 @@
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   input:focus-within {
   border: 1px solid #2196f3;
 }
-
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
-  .jp-EodagWidget-additionnalParameters-addbutton {
-  cursor: pointer;
-  border-color: var(--jp-ui-font-color0);
-  margin: 0.5em 0;
-  height: 1.5rem;
-  border-radius: 5px;
-  background-color: var(--jp-layout-color0);
-  color: var(--jp-ui-font-color0);
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  input::placeholder {
+  padding-left: 0.3rem;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
-  .jp-EodagWidget-additionnalParameters-deletebutton {
+.jp-EodagWidget-additionnalParameters-deletebutton,
+.jp-EodagWidget-additionnalParameters-addbutton {
   cursor: pointer;
-  width: 16px;
-  height: 16px;
+  /* width: 16px; */
+  /* height: 20px; */
   border-radius: 50%;
   border-width: 0px;
-  color: #ffffff;
-  border-color: #124d77;
-  padding: 2px;
-  font-size: 12px;
-  line-height: 1;
-  text-align: center;
-  background-color: #216ba5;
-  margin-right: 0.1em;
-  position: relative;
-  top: 0.5rem;
-  margin: 0 0.1em;
+  /* color: #000000; */
+  /* border-color: #124d77; */
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+section button .jp-EodagWidget-additionnalParameters-deletebutton svg,
+section button .jp-EodagWidget-additionnalParameters-addbutton svg {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.jp-EodagWidget-additionnalParameters-deletebutton svg:hover,
+.jp-EodagWidget-additionnalParameters-addbutton svg:hover {
+  color: #677381;
 }
 
 .jp-EodagWidget-select__control {
   background-color: var(--jp-layout-color0) !important;
+  border-radius: 5px !important;
+  border-color: var(--light-gray) !important;
 }
 
 .jp-EodagWidget-select__input,
 .jp-EodagWidget-select__control,
 .jp-EodagWidget-select__value-container,
-.jp-EodagWidget-select__indicatorindicators,
+.jp-EodagWidget-select__indicator,
 .jp-EodagWidget-select__menu,
 .jp-EodagWidget-select__menu-list,
 .jp-EodagWidget-select__optiooption {
@@ -186,12 +266,25 @@
   font-size: var(--jp-ui-font-size1);
   color: var(--jp-ui-font-color0);
   line-height: var(--jp-private-commandpalette-search-height);
+  border-radius: 5px !important;
+  /* border-color: var(--light-gray) !important; */
+  border-color: red;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-wrapper,
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker__input-container {
   width: 100%;
 }
+
+.jp-EodagWidget-select__indicator-separator,
+.jp-EodagWidget-select__dropdown-indicator > div > svg {
+  color: var(--light-gray) !important;
+}
+
+.jp-EodagWidget-select__placeholder {
+  color: var(--gray) !important;
+}
+
 .jp-EodagWidget input[type='range'] {
   width: 100%;
   -webkit-appearance: none;
@@ -418,4 +511,5 @@
 .jp-EodagWidget-input-name-line-through {
   text-decoration: line-through;
   color: #818181;
+  padding: 0 10px;
 }
