--- a/style/base.css
+++ b/style/base.css
@@ -1,3 +1,12 @@
+:root {
+  --light-gray: #c1c1c1;
+  --gray: #666666;
+  --base-button: #1976d2;
+  --button-hover: #3bacff;
+  --border-radius: 5px;
+  --base-font-size: 14px;
+}
+
 .jp-EodagWidget {
   display: flex;
   flex-direction: column;
@@ -23,18 +32,52 @@
   display: flex;
   flex-direction: column;
 }
+.jp-EodagWidget-form-buttons {
+  width: 100%;
+  max-width: 450px;
+  margin: auto;
+}
+.jp-EodagWidget-form-buttons-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+.jp-EodagWidget-loader {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+}
+.jp-EodagWidget-loader p {
+  margin-right: 10px;
+  font-weight: bold;
+}
+.jp-EodagWidget-input-wrapper {
+  display: flex;
+  align-items: center;
+}
+.jp-EodagWidget-input-wrapper > svg {
+  display: inline-block;
+  color: var(--gray);
+}
+
+.jp-EodagWidget-form-date-picker {
+  padding: 0 10px;
+}
+
+.jp-EodagWidget-form-date-picker-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button {
   cursor: pointer;
-  margin: 0 15px;
-  font-size: 16px;
-  padding: 5px;
-  color: var(--jp-ui-font-color1);
-  background: var(--jp-layout-color1);
+  min-width: 110px;
+  color: #ffffff;
+  background: var(--base-button);
   border: none;
   box-sizing: border-box;
   outline: none;
@@ -43,12 +86,23 @@
   -moz-appearance: none;
   padding: 7px;
   margin: 0px;
-  border-radius: var(--jp-border-radius);
+  border-radius: var(--border-radius);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
+
+.jp-EodagWidget-buttons svg {
+  margin-right: 0.5rem;
+}
+
+.jp-EodagWidget-buttons p {
+  text-align: left;
+  font-size: var(--jp-ui-font-size1);
+}
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button:hover {
-  background: var(--jp-layout-color2);
+  background: var(--button-hover);
 }
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-popper {
   position: relative;
@@ -65,8 +119,10 @@
   height: 300px;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
-  margin-top: 10px;
   padding: 0 10px;
+
+  max-width: 450px;
+  margin: 10px auto;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field fieldset {
   margin-top: 1.5em;
@@ -81,6 +137,13 @@
   background: var(--jp-layout-color0);
   height: 30px;
   position: relative;
+  border-radius: 5px;
+}
+
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-input-wrapper:nth-child(1) {
+  margin-right: 0.1rem;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:after {
   content: ' ';
@@ -96,24 +159,45 @@
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input {
   background: transparent;
   width: calc(100% - 18px);
-  float: left;
   border: none;
   outline: none;
   font-size: var(--jp-ui-font-size1);
   color: var(--jp-ui-font-color0);
   line-height: var(--jp-private-commandpalette-search-height);
+  width: 100%;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input::placeholder {
+  color: var(--gray);
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-additionnalParameters {
+  padding: 0 10px;
 }
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-input-name {
+  margin-bottom: 10px;
+}
+
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   .section {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.3rem;
 }
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   input {
   margin: 0 0.1em;
   line-height: var(--jp-private-commandpalette-search-height);
@@ -125,54 +209,50 @@
 
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
   input:focus-within {
   border: 1px solid #2196f3;
 }
-
 .jp-EodagWidget
   .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
-  .jp-EodagWidget-additionnalParameters-addbutton {
-  cursor: pointer;
-  border-color: var(--jp-ui-font-color0);
-  margin: 0.5em 0;
-  height: 1.5rem;
-  border-radius: 5px;
-  background-color: var(--jp-layout-color0);
-  color: var(--jp-ui-font-color0);
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  input::placeholder {
+  padding-left: 0.3rem;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-additionnalParameters-fieldset
-  .jp-EodagWidget-additionnalParameters-deletebutton {
+.jp-EodagWidget-additionnalParameters-deletebutton,
+.jp-EodagWidget-additionnalParameters-addbutton {
   cursor: pointer;
-  width: 16px;
-  height: 16px;
   border-radius: 50%;
   border-width: 0px;
-  color: #ffffff;
-  border-color: #124d77;
-  padding: 2px;
-  font-size: 12px;
-  line-height: 1;
-  text-align: center;
-  background-color: #216ba5;
-  margin-right: 0.1em;
-  position: relative;
-  top: 0.5rem;
-  margin: 0 0.1em;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+section button .jp-EodagWidget-additionnalParameters-deletebutton svg,
+section button .jp-EodagWidget-additionnalParameters-addbutton svg {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.jp-EodagWidget-additionnalParameters-deletebutton svg:hover,
+.jp-EodagWidget-additionnalParameters-addbutton svg:hover {
+  color: #677381;
 }
 
 .jp-EodagWidget-select__control {
   background-color: var(--jp-layout-color0) !important;
+  border-radius: 5px !important;
+  border-color: var(--light-gray) !important;
 }
 
 .jp-EodagWidget-select__input,
 .jp-EodagWidget-select__control,
 .jp-EodagWidget-select__value-container,
-.jp-EodagWidget-select__indicatorindicators,
+.jp-EodagWidget-select__indicator,
 .jp-EodagWidget-select__menu,
 .jp-EodagWidget-select__menu-list,
 .jp-EodagWidget-select__optiooption {
@@ -180,14 +260,27 @@
   font-size: var(--jp-ui-font-size1);
   color: var(--jp-ui-font-color0);
   line-height: var(--jp-private-commandpalette-search-height);
+  border-radius: 5px !important;
+  border-color: red;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-wrapper,
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker__input-container {
   width: 100%;
 }
+
+.jp-EodagWidget-select__indicator-separator,
+.jp-EodagWidget-select__dropdown-indicator > div > svg {
+  color: var(--light-gray) !important;
+}
+
+.jp-EodagWidget-select__placeholder {
+  color: var(--gray) !important;
+}
+
 .jp-EodagWidget input[type='range'] {
   width: 100%;
+  appearance: none;
   -webkit-appearance: none;
   outline: none;
   background: var(--jp-layout-color0);
@@ -221,6 +314,7 @@
   border-radius: 0px;
   border: 1px solid var(--jp-border-color0);
 }
+
 .jp-EodagWidget input[type='range']::-moz-range-thumb {
   appearance: none;
   padding: 0;
@@ -289,6 +383,17 @@
   width: 50%;
 }
 
+.jp-EodagWidget-modal
+  .jp-EodagWidget-modal-container
+  .jp-EodagWidget-modal-footer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--jp-brand-color1);
+  padding: 12px 10px;
+  font-size: 20px;
+  color: white;
+}
+
 .jp-EodagWidget-modal .jp-EodagWidget-browse-wrapper {
   height: calc(100% - 130px);
 }
@@ -322,6 +427,8 @@
 
 .jp-EodagWidget-appbar {
   flex: 1 100%;
+  display: flex;
+  justify-content: space-between;
   background-color: var(--jp-brand-color1);
   padding: 12px 10px;
   font-size: 20px;
@@ -338,6 +445,10 @@
 #jp-left-stack {
   z-index: 2;
 }
+#jp-left-stack > .lm-Widget {
+  min-width: 315px !important;
+}
+
 .jp-EodagWidget::-webkit-scrollbar {
   z-index: 0;
 }
@@ -371,27 +482,38 @@
   justify-content: center;
 }
 .jp-EodagWidget-appbar button,
-.jp-EodagWidget-browse-wrapper button {
+.jp-EodagWidget-browse-wrapper button,
+.jp-EodagWidget-modal-footer button {
   background: none;
   border: none;
   outline: none;
   font-size: 18px;
   cursor: pointer;
 }
-.jp-EodagWidget-appbar button {
+.jp-EodagWidget-appbar button,
+.jp-EodagWidget-modal-footer button {
   color: white;
+  border: 1px solid var(--button-hover);
+  border-radius: 5px;
+}
+
+.jp-EodagWidget-modal-footer button {
+  padding: 5px 10px;
+}
+
+.jp-EodagWidget-appbar button:hover,
+.jp-EodagWidget-modal-footer button:hover {
+  background-color: var(--button-hover);
 }
 .jp-EodagWidget-apply {
   float: right;
   padding: 3px 6px;
 }
-.jp-EodagWidget-apply:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
+
 .jp-EodagWidget-product h4 {
   padding-left: 20px;
 }
-.jp-EodagWidget-input-name-line-through {
-  text-decoration: line-through;
-  color: #818181;
+
+label.jp-EodagWidget-input-name:nth-child(3) {
+  padding: 0 10px;
 }
