--- a/style/base.css
+++ b/style/base.css
@@ -206,7 +206,31 @@
   color: var(--jp-ui-font-color0);
   width: 40%;
 }
-
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionnalParameters-label-icon-wrapper {
+  display: flex;
+  align-items: center;
+}
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
+  a {
+  display: inline-flex;
+  margin-left: 5px;
+}
+.jp-EodagWidget
+  .jp-EodagWidget-form
+  .jp-EodagWidget-field
+  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
+  a:hover {
+  color: #677381;
+}
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
@@ -437,7 +461,6 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg {
 
 .jp-Eodag-tooltip {
   max-width: 250px;
-  padding-right: 15px;
   word-wrap: break-word;
   z-index: 4;
 }
