--- a/style/base.css
+++ b/style/base.css
@@ -18,6 +18,11 @@
   padding: 5px;
 }
 
+.jp-EodagWidget-header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .jp-EodagWidget-header {
   border-bottom: var(--jp-border-width) solid var(--jp-border-color2);
   flex: 0 0 auto;
@@ -27,6 +32,15 @@
   margin: 0px;
   padding: 8px 12px;
   text-transform: uppercase;
+}
+
+.jp-EodagWidget-settings-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.jp-EodagWidget-settings-wrapper button {
+  padding: 1px 4px;
 }
 
 .jp-EodagWidget-wrapper {
@@ -79,7 +93,7 @@
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 1em;
 }
 
 .jp-EodagWidget-buttons-button__disabled {
@@ -135,9 +149,7 @@
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
   padding: 0 10px;
-
   max-width: 450px;
-  margin: 10px auto;
 }
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field fieldset {
   margin-top: 1.5em;
