--- a/style/base.css
+++ b/style/base.css
@@ -17,6 +17,10 @@
   overflow: auto;
   padding: 5px;
 }
+.jp-EodagWidget-products-search {
+  overflow: auto;
+  height: 100%;
+}
 
 .jp-EodagWidget-header-wrapper {
   display: flex;
@@ -45,7 +49,6 @@
 
 .jp-EodagWidget-wrapper {
   display: flex;
-  height: 100%;
   flex-direction: column;
   justify-content: space-between;
 }
