--- a/style/base.css
+++ b/style/base.css
@@ -17,6 +17,7 @@
   overflow: auto;
   padding: 5px;
 }
+
 .jp-EodagWidget-products-search {
   overflow: auto;
   height: 100%;
@@ -27,6 +28,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .jp-EodagWidget-header {
   border-bottom: var(--jp-border-width) solid var(--jp-border-color2);
   flex: 0 0 auto;
@@ -61,29 +63,35 @@
   display: flex;
   flex-direction: column;
 }
+
 .jp-EodagWidget-form-buttons {
   width: 100%;
   max-width: 450px;
   margin: auto;
 }
+
 .jp-EodagWidget-form-buttons-wrapper {
   display: flex;
   justify-content: space-evenly;
 }
+
 .jp-EodagWidget-loader {
   margin-top: 30px;
   display: flex;
   align-items: center;
 }
+
 .jp-EodagWidget-loader p {
   margin-right: 10px;
   font-weight: bold;
 }
+
 .jp-EodagWidget-input-wrapper {
   display: flex;
   align-items: center;
 }
-.jp-EodagWidget-input-wrapper > svg {
+
+.jp-EodagWidget-input-wrapper>svg {
   display: inline-block;
   color: var(--gray);
 }
@@ -97,6 +105,7 @@
   justify-content: space-between;
   margin-top: 10px;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons {
   display: flex;
   justify-content: center;
@@ -144,6 +153,7 @@
   position: relative;
   z-index: 1000;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-slider {
   display: flex;
   align-items: center;
@@ -154,18 +164,22 @@
 .jp-EodagWidget-map {
   height: 300px;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
   padding: 0 10px;
   max-width: 450px;
   margin: auto;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field fieldset {
   margin-top: 1.5em;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-name {
   margin-top: 1em;
   display: block;
 }
+
 .jp-EodagWidget-input-name-checkbox-wrapper {
   margin-top: 1em;
   display: flex;
@@ -173,6 +187,7 @@
   justify-content: start;
   align-items: center;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper {
   padding: 0px 8px;
   border: 1px solid var(--jp-border-color0);
@@ -182,22 +197,21 @@
   border-radius: 5px;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-input-wrapper:nth-child(1) {
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:nth-child(1) {
   margin-right: 0.1rem;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:after {
   content: ' ';
   position: absolute;
   right: 5px;
   top: 5px;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-input-wrapper:focus-within {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-wrapper:focus-within {
   border: 1px solid #2196f3;
 }
+
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input {
   background: transparent;
   width: calc(100% - 18px);
@@ -217,30 +231,23 @@
   padding: 0 10px;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-input-name {
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-section-title {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-input-name {
   margin-bottom: 10px;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .section {
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0.3rem;
 }
 
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  input {
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters input {
   margin: 0 0.1em;
   line-height: var(--jp-private-commandpalette-search-height);
   border: 1px solid var(--jp-border-color0);
@@ -248,43 +255,26 @@
   color: var(--jp-ui-font-color0);
   width: 40%;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-additionnalParameters-label-icon-wrapper {
   display: flex;
   align-items: center;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
-  a {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-additionnalParameters-label-icon-wrapper a {
   display: inline-flex;
   margin-left: 5px;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
-  a:hover {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-additionnalParameters-label-icon-wrapper a:hover {
   color: #677381;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  input:focus-within {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters input:focus-within {
   border: 1px solid #2196f3;
 }
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  input::placeholder {
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters input::placeholder {
   padding-left: 0.3rem;
 }
 
@@ -332,7 +322,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 }
 
 .jp-EodagWidget-select__indicator-separator,
-.jp-EodagWidget-select__dropdown-indicator > div > svg {
+.jp-EodagWidget-select__dropdown-indicator>div>svg {
   color: var(--light-gray) !important;
 }
 
@@ -347,6 +337,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   outline: none;
   background: var(--jp-layout-color0);
 }
+
 .jp-EodagWidget input[type='range']::-webkit-slider-runnable-track {
   width: 100%;
   height: 7px;
@@ -355,6 +346,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   border-radius: 0px;
   border: 1px solid var(--jp-border-color0);
 }
+
 .jp-EodagWidget input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
@@ -368,6 +360,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   color: var(--jp-brand-color1);
   margin-top: -8px;
 }
+
 .jp-EodagWidget input[type='range']::-moz-range-track {
   width: 100%;
   height: 7px;
@@ -389,10 +382,12 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   color: var(--jp-brand-color1);
   margin-top: -8px;
 }
+
 .jp-EodagWidget input[type='range']::-moz-range-progress {
   height: 0;
   background: transparent;
 }
+
 .jp-EodagWidget input[type='range']::-ms-track {
   width: 100%;
   height: 7px;
@@ -402,6 +397,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   border: 1px solid var(--jp-border-color0);
   color: transparent;
 }
+
 .jp-EodagWidget input[type='range']::-ms-thumb {
   appearance: none;
   padding: 0;
@@ -414,12 +410,15 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   color: var(--jp-brand-color1);
   margin-top: -8px;
 }
+
 .jp-EodagWidget input[type='range']::-ms-tooltip {
   display: none;
 }
+
 .jp-EodagWidget input[type='range']::-ms-fill-lower {
   background: transparent;
 }
+
 .jp-EodagWidget input[type='range']::-ms-fill-upper {
   background: transparent;
 }
@@ -428,6 +427,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   display: flex;
   justify-content: center;
 }
+
 .jp-EodagWidget-modal .jp-EodagWidget-small-quicklook {
   max-height: 200px;
   max-width: 200px;
@@ -445,9 +445,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   width: 50%;
 }
 
-.jp-EodagWidget-modal
-  .jp-EodagWidget-modal-container
-  .jp-EodagWidget-modal-footer {
+.jp-EodagWidget-modal .jp-EodagWidget-modal-container .jp-EodagWidget-modal-footer {
   display: flex;
   justify-content: center;
   background-color: var(--jp-brand-color1);
@@ -459,9 +457,11 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 .jp-EodagWidget-modal .jp-EodagWidget-browse-wrapper {
   height: calc(100% - 130px);
 }
+
 .jp-EodagWidget-modal .jp-EodagWidget-loading-wrapper {
   margin-right: 10px;
 }
+
 .jp-EodagWidget-modal .jp-EodagWidget-browse-title {
   display: flex;
   justify-content: flex-end;
@@ -508,7 +508,8 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 #jp-left-stack {
   z-index: 2;
 }
-#jp-left-stack > .lm-Widget {
+
+#jp-left-stack>.lm-Widget {
   min-width: 315px !important;
 }
 
@@ -521,21 +522,26 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 .jp-EodagWidget-browse-wrapper .noClick {
   cursor: initial;
 }
+
 .jp-EodagWidget-browse-wrapper .tableCell {
   flex: 1;
 }
+
 .jp-EodagWidget-browse-wrapper .headerRow {
   height: 40px;
   border-bottom: 2px solid #2196f3;
   color: #818181;
 }
+
 .jp-EodagWidget-browse-wrapper .tableRow {
   cursor: pointer;
   border-bottom: 1px solid rgba(180, 180, 180, 0.719);
 }
+
 .jp-EodagWidget-browse-wrapper .tableRow:hover {
   background-color: rgba(180, 180, 180, 0.747);
 }
+
 .jp-EodagWidget-browse-wrapper .flexContainer {
   text-align: center;
   font-size: 14px;
@@ -544,6 +550,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   box-sizing: border-box;
   justify-content: center;
 }
+
 .jp-EodagWidget-appbar button,
 .jp-EodagWidget-browse-wrapper button,
 .jp-EodagWidget-modal-footer button {
@@ -553,6 +560,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
   font-size: 18px;
   cursor: pointer;
 }
+
 .jp-EodagWidget-appbar button,
 .jp-EodagWidget-modal-footer button {
   color: white;
@@ -568,6 +576,7 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 .jp-EodagWidget-modal-footer button:hover {
   background-color: var(--button-hover);
 }
+
 .jp-EodagWidget-apply {
   float: right;
   padding: 3px 6px;
@@ -585,6 +594,7 @@ label.jp-EodagWidget-input-name:nth-child(3) {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
