--- a/style/base.css
+++ b/style/base.css
@@ -228,12 +228,35 @@
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-additionnalParameters {
+  margin-top: 10px;
   padding: 0 10px;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-section-title {
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-optional-button {
+  border: none;
+  background: none;
+  color: #2196f3;
+  font-size: 14px;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-optional-button:disabled {
+  color: gray;
+  cursor: not-allowed;
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-optional-button:not(:disabled):hover {
+  color: rgb(59, 172, 255);
+}
+
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters {
+  margin-top: 10px;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-input-name {
@@ -259,6 +282,7 @@
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-additionnalParameters-label-icon-wrapper {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field .jp-EodagWidget-additionnalParameters .jp-EodagWidget-additionnalParameters-label-icon-wrapper a {
