--- a/style/base.css
+++ b/style/base.css
@@ -86,6 +86,11 @@
   font-weight: bold;
 }
 
+.jp-EodagWidget-input-error {
+  border: 2px solid red !important;
+  border-radius: 5px;
+}
+
 .jp-EodagWidget-input-wrapper {
   display: flex;
   align-items: center;
